[gd_scene load_steps=3 format=3 uid="uid://bnvsomj45fcrr"]

[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_hf48e"]
[ext_resource type="Texture2D" uid="uid://b38u3kfumruo6" path="res://assets/img/272525.png" id="1_onyv6"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_hf48e")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0.156863)

[node name="text_label" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = -68.5
offset_right = 159.5
offset_bottom = -15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 36
text = "O TEMPO ACABOU"

[node name="coins_control" type="Control" parent="ColorRect"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = 320.0
offset_bottom = 320.0
grow_horizontal = 2
grow_vertical = 2

[node name="coins_icon" type="Sprite2D" parent="ColorRect/coins_control"]
position = Vector2(-25, 17)
texture = ExtResource("1_onyv6")

[node name="coins_label" type="Label" parent="ColorRect/coins_control"]
offset_right = 56.0
offset_bottom = 37.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 24
text = "0000"

[node name="button_retry" type="Button" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 68.0
offset_right = 24.0
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
text = "De novo"

[connection signal="pressed" from="ColorRect/button_retry" to="." method="_on_button_retry_pressed"]
